AC_INIT([love], [0.5-0])
AC_CONFIG_AUX_DIR([platform/unix])
AC_CONFIG_MACRO_DIR([platform/unix/m4])
AC_CONFIG_SRCDIR([src/love.cpp])
AC_SUBST([ACLOCAL_AMFLAGS], ["-I $ac_macro_dir"])
AM_INIT_AUTOMAKE([-Wall foreign])
AC_PROG_LIBTOOL
AC_PROG_CC
AC_PROG_CXX
AC_SEARCH_LIBS([sqrt], [m], [], AC_MSG_ERROR([Lua needs C math library]))
AC_SEARCH_LIBS([FT_Load_Glyph], [freetype], [], AC_MSG_ERROR([Can't LÖVE without FreeType]))
AC_SEARCH_LIBS([glLoadIdentity], [GL], [], AC_MSG_ERROR([Can't LÖVE without OpenGL]))
AC_SEARCH_LIBS([gluOrtho2D], [GLU], [], AC_MSG_ERROR([Can't LÖVE without OpenGL Utility Library]))
AC_SEARCH_LIBS([ilInit], [IL], [], AC_MSG_ERROR([Can't LÖVE without DevIL]))
AC_SEARCH_LIBS([iluErrorString], [ILU], [], AC_MSG_ERROR([Can't LÖVE without DevIL Utility]))
AC_SEARCH_LIBS(
	[lua_pcall],
	[lua lua5.1],
	if test "$ac_cv_search_lua_pcall" = "-llua5.1"; then
		AC_SUBST([INCLUDE_LUA], [-I/usr/include/lua5.1])
	fi,
	AC_MSG_ERROR([Can't LÖVE without Lua])
)
AC_SEARCH_LIBS([PHYSFS_init], [physfs], [], AC_MSG_ERROR([Can't LÖVE without PhysicsFS]))
AC_SEARCH_LIBS([SDL_Init], [SDL], [], AC_MSG_ERROR([Can't LÖVE without SDL]))
AC_SEARCH_LIBS([Mix_OpenAudio], [SDL_mixer], [], AC_MSG_ERROR([Can't LÖVE without SDL_mixer]))
AC_PREFIX_DEFAULT([/usr])
bindir='${prefix}/bin'
libdir='${prefix}/lib/love'
AC_CONFIG_FILES([
	Makefile
	src/Makefile
])
AC_OUTPUT
