SUBDIRS =
AUTOMAKE_OPTIONS = subdir-objects
AM_CPPFLAGS = -I/usr/include/freetype2  $(INCLUDE_LUA) -I/usr/include/SDL

# LÖVE executable
bin_PROGRAMS = love
love_LDFLAGS =
love_LDADD =

love_SOURCES = \
./love_sdlkeyboard/love_sdlkeyboard.cpp \
./love_sdlkeyboard/love_sdlkeyboard.h \
./love_sdlsystem/love_sdlsystem.h \
./love_sdlsystem/love_sdlsystem.cpp \
./love_luasocket/love_luasocket.h \
./love_luasocket/love_luasocket.cpp \
./love_luasocket/luasocket/except.c \
./love_luasocket/luasocket/tcp.c \
./love_luasocket/luasocket/tp.lua.h \
./love_luasocket/luasocket/timeout.h \
./love_luasocket/luasocket/auxiliar.c \
./love_luasocket/luasocket/luasocket.c \
./love_luasocket/luasocket/buffer.h \
./love_luasocket/luasocket/unix.c \
./love_luasocket/luasocket/ftp.lua.h \
./love_luasocket/luasocket/usocket.c \
./love_luasocket/luasocket/tcp.h \
./love_luasocket/luasocket/auxiliar.h \
./love_luasocket/luasocket/select.h \
./love_luasocket/luasocket/select.c \
./love_luasocket/luasocket/smtp.lua.h \
./love_luasocket/luasocket/io.h \
./love_luasocket/luasocket/options.c \
./love_luasocket/luasocket/socket.lua.h \
./love_luasocket/luasocket/inet.c \
./love_luasocket/luasocket/http.lua.h \
./love_luasocket/luasocket/timeout.c \
./love_luasocket/luasocket/inet.h \
./love_luasocket/luasocket/luasocket.h \
./love_luasocket/luasocket/socket.h \
./love_luasocket/luasocket/except.h \
./love_luasocket/luasocket/udp.c \
./love_luasocket/luasocket/io.c \
./love_luasocket/luasocket/ltn12.lua.h \
./love_luasocket/luasocket/usocket.h \
./love_luasocket/luasocket/options.h \
./love_luasocket/luasocket/unix.h \
./love_luasocket/luasocket/url.lua.h \
./love_luasocket/luasocket/mime.h \
./love_luasocket/luasocket/buffer.c \
./love_luasocket/luasocket/mime.c \
./love_luasocket/luasocket/udp.h \
./love_luasocket/luasocket/mime.lua.h \
./love_sdlmouse/love_sdlmouse.h \
./love_sdlmouse/love_sdlmouse.cpp \
./love_sdljoystick/love_sdljoystick.h \
./love_sdljoystick/love_sdljoystick.cpp \
./love_opengl/ImageFont.h \
./love_opengl/ImageFont.cpp \
./love_opengl/GLee.c \
./love_opengl/Image.cpp \
./love_opengl/ParticleSystem.cpp \
./love_opengl/Texture.cpp \
./love_opengl/GLee.h \
./love_opengl/love_opengl.h \
./love_opengl/Animation.h \
./love_opengl/Animation.cpp \
./love_opengl/Texture.h \
./love_opengl/Font.h \
./love_opengl/love_opengl.cpp \
./love_opengl/TrueTypeFont.h \
./love_opengl/TrueTypeFont.cpp \
./love_opengl/Font.cpp \
./love_opengl/Color.h \
./love_opengl/Image.h \
./love_opengl/Color.cpp \
./love_opengl/ParticleSystem.h \
./love_physfs/love_physfs.h \
./love_physfs/File.h \
./love_physfs/File.cpp \
./love_physfs/love_physfs.cpp \
./love_box2d/Source/Common/b2Settings.h \
./love_box2d/Source/Common/b2Math.h \
./love_box2d/Source/Common/b2BlockAllocator.h \
./love_box2d/Source/Common/b2BlockAllocator.cpp \
./love_box2d/Source/Common/b2Settings.cpp \
./love_box2d/Source/Common/b2StackAllocator.h \
./love_box2d/Source/Common/b2StackAllocator.cpp \
./love_box2d/Source/Common/Fixed.h \
./love_box2d/Source/Common/b2Math.cpp \
./love_box2d/Source/Common/jtypes.h \
./love_box2d/Source/Dynamics/b2Body.h \
./love_box2d/Source/Dynamics/b2Island.h \
./love_box2d/Source/Dynamics/b2ContactManager.cpp \
./love_box2d/Source/Dynamics/b2World.h \
./love_box2d/Source/Dynamics/b2WorldCallbacks.h \
./love_box2d/Source/Dynamics/b2ContactManager.h \
./love_box2d/Source/Dynamics/Contacts/b2Contact.cpp \
./love_box2d/Source/Dynamics/Contacts/b2Contact.h \
./love_box2d/Source/Dynamics/Contacts/b2PolyContact.cpp \
./love_box2d/Source/Dynamics/Contacts/b2CircleContact.h \
./love_box2d/Source/Dynamics/Contacts/b2NullContact.h \
./love_box2d/Source/Dynamics/Contacts/b2CircleContact.cpp \
./love_box2d/Source/Dynamics/Contacts/b2ContactSolver.h \
./love_box2d/Source/Dynamics/Contacts/b2PolyContact.h \
./love_box2d/Source/Dynamics/Contacts/b2PolyAndCircleContact.h \
./love_box2d/Source/Dynamics/Contacts/b2PolyAndCircleContact.cpp \
./love_box2d/Source/Dynamics/Contacts/b2ContactSolver.cpp \
./love_box2d/Source/Dynamics/b2Island.cpp \
./love_box2d/Source/Dynamics/b2Body.cpp \
./love_box2d/Source/Dynamics/b2WorldCallbacks.cpp \
./love_box2d/Source/Dynamics/b2World.cpp \
./love_box2d/Source/Dynamics/Joints/b2DistanceJoint.cpp \
./love_box2d/Source/Dynamics/Joints/b2PrismaticJoint.h \
./love_box2d/Source/Dynamics/Joints/b2DistanceJoint.h \
./love_box2d/Source/Dynamics/Joints/b2Joint.cpp \
./love_box2d/Source/Dynamics/Joints/b2PulleyJoint.h \
./love_box2d/Source/Dynamics/Joints/b2Joint.h \
./love_box2d/Source/Dynamics/Joints/b2MouseJoint.h \
./love_box2d/Source/Dynamics/Joints/b2GearJoint.cpp \
./love_box2d/Source/Dynamics/Joints/b2MouseJoint.cpp \
./love_box2d/Source/Dynamics/Joints/b2PulleyJoint.cpp \
./love_box2d/Source/Dynamics/Joints/b2RevoluteJoint.h \
./love_box2d/Source/Dynamics/Joints/b2RevoluteJoint.cpp \
./love_box2d/Source/Dynamics/Joints/b2PrismaticJoint.cpp \
./love_box2d/Source/Dynamics/Joints/b2GearJoint.h \
./love_box2d/Source/Collision/Shapes/b2Shape.cpp \
./love_box2d/Source/Collision/Shapes/b2CircleShape.h \
./love_box2d/Source/Collision/Shapes/b2Shape.h \
./love_box2d/Source/Collision/Shapes/b2PolygonShape.h \
./love_box2d/Source/Collision/Shapes/b2CircleShape.cpp \
./love_box2d/Source/Collision/Shapes/b2PolygonShape.cpp \
./love_box2d/Source/Collision/b2PairManager.cpp \
./love_box2d/Source/Collision/b2BroadPhase.cpp \
./love_box2d/Source/Collision/b2Collision.cpp \
./love_box2d/Source/Collision/b2Collision.h \
./love_box2d/Source/Collision/b2Distance.cpp \
./love_box2d/Source/Collision/b2CollideCircle.cpp \
./love_box2d/Source/Collision/b2BroadPhase.h \
./love_box2d/Source/Collision/b2PairManager.h \
./love_box2d/Source/Collision/b2TimeOfImpact.cpp \
./love_box2d/Source/Collision/b2CollidePoly.cpp \
./love_box2d/Include/Box2D.h \
./love_box2d/MouseJoint.h \
./love_box2d/love_box2d.cpp \
./love_box2d/DistanceJoint.cpp \
./love_box2d/Body.h \
./love_box2d/DistanceJoint.h \
./love_box2d/Joint.cpp \
./love_box2d/love_box2d.h \
./love_box2d/PrismaticJoint.h \
./love_box2d/RevoluteJoint.h \
./love_box2d/Contact.cpp \
./love_box2d/PrismaticJoint.cpp \
./love_box2d/CircleShape.h \
./love_box2d/Contact.h \
./love_box2d/CircleShape.cpp \
./love_box2d/Body.cpp \
./love_box2d/PolygonShape.h \
./love_box2d/World.h \
./love_box2d/RevoluteJoint.cpp \
./love_box2d/PolygonShape.cpp \
./love_box2d/World.cpp \
./love_box2d/MouseJoint.cpp \
./love_box2d/Joint.h \
./love_box2d/Shape.h \
./love_box2d/graham/GrahamScanConvexHull.h \
./love_box2d/graham/GrahamScanConvexHull.cpp \
./love_box2d/Shape.cpp \
./liblove/wwrap.h \
./liblove/wAnimation.h \
./liblove/luax.h \
./liblove/wtimer.h \
./liblove/Reference.cpp \
./liblove/Object.cpp \
./liblove/wCircleShape.h \
./liblove/wContact.h \
./liblove/math.h \
./liblove/Volatile.h \
./liblove/wWorld.h \
./liblove/wjoystick.h \
./liblove/wkeyboard.h \
./liblove/wFont.h \
./liblove/Vector.cpp \
./liblove/Object.h \
./liblove/version.h \
./liblove/wfilesystem.h \
./liblove/wParticleSystem.h \
./liblove/wBody.h \
./liblove/config.h \
./liblove/File.h \
./liblove/version.cpp \
./liblove/Drawable.cpp \
./liblove/wRevoluteJoint.h \
./liblove/wgraphics.h \
./liblove/Reference.h \
./liblove/wShape.h \
./liblove/luax.cpp \
./liblove/wImage.h \
./liblove/File.cpp \
./liblove/wmouse.h \
./liblove/wMouseJoint.h \
./liblove/wJoint.h \
./liblove/Volatile.cpp \
./liblove/wFile.h \
./liblove/wColor.h \
./liblove/types.h \
./liblove/constants.h \
./liblove/wDistanceJoint.h \
./liblove/wsystem.h \
./liblove/wphysics.h \
./liblove/Vector.h \
./liblove/wPolygonShape.h \
./liblove/wDrawable.h \
./liblove/platform.h \
./liblove/wPrismaticJoint.h \
./liblove/Drawable.h \
./love.cpp \
./love_sdltimer/love_sdltimer.cpp \
./love_sdltimer/love_sdltimer.h
