AM_CPPFLAGS = -I/usr/include/AL -I/usr/include/freetype2  $(INCLUDE_LUA) -I/usr/include/SDL
AUTOMAKE_OPTIONS = subdir-objects
DEFAULT_INCLUDES =
SUBDIRS =

# LÖVE executable
bin_PROGRAMS = love
#love_LDFLAGS =
#love_LDADD =

love_SOURCES = \
./Reference.cpp \
./Matrix.cpp \
./math.h \
./audio/openal/wrap_Music.h \
./audio/openal/wrap_Audio.h \
./audio/openal/Audio.h \
./audio/openal/Audio.cpp \
./audio/openal/Music.cpp \
./audio/openal/wrap_Audible.cpp \
./audio/openal/wrap_Channel.cpp \
./audio/openal/wrap_Music.cpp \
./audio/openal/Channel.cpp \
./audio/openal/wrap_Channel.h \
./audio/openal/wrap_Audible.h \
./audio/openal/Sound.h \
./audio/openal/wrap_Sound.cpp \
./audio/openal/Channel.h \
./audio/openal/wrap_Sound.h \
./audio/openal/Music.h \
./audio/openal/Audible.h \
./audio/openal/wrap_Audio.cpp \
./audio/openal/Audible.cpp \
./audio/openal/Sound.cpp \
./timer/sdl/wrap_Timer.cpp \
./timer/sdl/Timer.h \
./timer/sdl/wrap_Timer.h \
./timer/sdl/Timer.cpp \
./Object.cpp \
./Reference.h \
./filesystem/File.h \
./filesystem/physfs/wrap_File.h \
./filesystem/physfs/wrap_File.cpp \
./filesystem/physfs/Filesystem.cpp \
./filesystem/physfs/FileData.h \
./filesystem/physfs/File.h \
./filesystem/physfs/FileData.cpp \
./filesystem/physfs/wrap_Filesystem.h \
./filesystem/physfs/File.cpp \
./filesystem/physfs/wrap_Filesystem.cpp \
./filesystem/physfs/Filesystem.h \
./sound/SoundData.cpp \
./sound/sdlsound/SoundData.cpp \
./sound/sdlsound/wrap_SoundData.h \
./sound/sdlsound/wrap_SoundData.cpp \
./sound/sdlsound/SoundData.h \
./sound/sdlsound/Sound.h \
./sound/sdlsound/wrap_Sound.cpp \
./sound/sdlsound/wrap_Sound.h \
./sound/sdlsound/Sound.cpp \
./sound/SoundData.h \
./image/devil/wrap_ImageData.cpp \
./image/devil/Image.h \
./image/devil/wrap_Image.h \
./image/devil/wrap_Image.cpp \
./image/devil/Image.cpp \
./image/devil/ImageData.h \
./image/devil/wrap_ImageData.h \
./image/devil/ImageData.cpp \
./image/ImageData.h \
./image/ImageData.cpp \
./Module.h \
./luax.h \
./event/Event.h \
./event/sdl/wrap_Event.h \
./event/sdl/Event.h \
./event/sdl/Event.cpp \
./event/sdl/wrap_Event.cpp \
./love.cpp \
./joystick/sdl/Joystick.cpp \
./joystick/sdl/wrap_Joystick.h \
./joystick/sdl/Joystick.h \
./joystick/sdl/wrap_Joystick.cpp \
./Data.h \
./Object.h \
./constants.h \
./Vector.cpp \
./wrap.h \
./types.h \
./keyboard/sdl/Keyboard.cpp \
./keyboard/sdl/wrap_Keyboard.h \
./keyboard/sdl/Keyboard.h \
./keyboard/sdl/wrap_Keyboard.cpp \
./mouse/sdl/Mouse.h \
./mouse/sdl/Mouse.cpp \
./mouse/sdl/wrap_Mouse.h \
./mouse/sdl/wrap_Mouse.cpp \
./config.h \
./Matrix.h \
./Vector.h \
./physics/box2d/wrap_Body.h \
./physics/box2d/wrap_MouseJoint.cpp \
./physics/box2d/PolygonShape.cpp \
./physics/box2d/graham/GrahamScanConvexHull.cpp \
./physics/box2d/graham/GrahamScanConvexHull.h \
./physics/box2d/wrap_Physics.cpp \
./physics/box2d/wrap_Physics.h \
./physics/box2d/Physics.cpp \
./physics/box2d/wrap_PolygonShape.h \
./physics/box2d/CircleShape.h \
./physics/box2d/wrap_Shape.cpp \
./physics/box2d/wrap_CircleShape.cpp \
./physics/box2d/Physics.h \
./physics/box2d/wrap_PolygonShape.cpp \
./physics/box2d/DistanceJoint.cpp \
./physics/box2d/World.cpp \
./physics/box2d/MouseJoint.cpp \
./physics/box2d/wrap_RevoluteJoint.cpp \
./physics/box2d/Joint.cpp \
./physics/box2d/wrap_PrismaticJoint.h \
./physics/box2d/Include/Box2D.h \
./physics/box2d/Body.cpp \
./physics/box2d/Shape.cpp \
./physics/box2d/Contact.h \
./physics/box2d/Body.h \
./physics/box2d/PolygonShape.h \
./physics/box2d/wrap_World.cpp \
./physics/box2d/Joint.h \
./physics/box2d/wrap_DistanceJoint.cpp \
./physics/box2d/wrap_World.h \
./physics/box2d/World.h \
./physics/box2d/wrap_Joint.cpp \
./physics/box2d/Contact.cpp \
./physics/box2d/MouseJoint.h \
./physics/box2d/wrap_Body.cpp \
./physics/box2d/wrap_PrismaticJoint.cpp \
./physics/box2d/Source/Collision/b2PairManager.h \
./physics/box2d/Source/Collision/b2CollideCircle.cpp \
./physics/box2d/Source/Collision/b2Distance.cpp \
./physics/box2d/Source/Collision/Shapes/b2PolygonShape.h \
./physics/box2d/Source/Collision/Shapes/b2CircleShape.cpp \
./physics/box2d/Source/Collision/Shapes/b2PolygonShape.cpp \
./physics/box2d/Source/Collision/Shapes/b2CircleShape.h \
./physics/box2d/Source/Collision/Shapes/b2Shape.h \
./physics/box2d/Source/Collision/Shapes/b2Shape.cpp \
./physics/box2d/Source/Collision/b2BroadPhase.cpp \
./physics/box2d/Source/Collision/b2BroadPhase.h \
./physics/box2d/Source/Collision/b2Collision.h \
./physics/box2d/Source/Collision/b2PairManager.cpp \
./physics/box2d/Source/Collision/b2TimeOfImpact.cpp \
./physics/box2d/Source/Collision/b2Collision.cpp \
./physics/box2d/Source/Collision/b2CollidePoly.cpp \
./physics/box2d/Source/Dynamics/b2ContactManager.h \
./physics/box2d/Source/Dynamics/b2World.cpp \
./physics/box2d/Source/Dynamics/b2World.h \
./physics/box2d/Source/Dynamics/b2WorldCallbacks.h \
./physics/box2d/Source/Dynamics/b2Island.h \
./physics/box2d/Source/Dynamics/b2Body.cpp \
./physics/box2d/Source/Dynamics/b2ContactManager.cpp \
./physics/box2d/Source/Dynamics/b2Body.h \
./physics/box2d/Source/Dynamics/b2WorldCallbacks.cpp \
./physics/box2d/Source/Dynamics/b2Island.cpp \
./physics/box2d/Source/Dynamics/Contacts/b2CircleContact.cpp \
./physics/box2d/Source/Dynamics/Contacts/b2PolyContact.cpp \
./physics/box2d/Source/Dynamics/Contacts/b2ContactSolver.cpp \
./physics/box2d/Source/Dynamics/Contacts/b2PolyContact.h \
./physics/box2d/Source/Dynamics/Contacts/b2PolyAndCircleContact.h \
./physics/box2d/Source/Dynamics/Contacts/b2Contact.h \
./physics/box2d/Source/Dynamics/Contacts/b2CircleContact.h \
./physics/box2d/Source/Dynamics/Contacts/b2PolyAndCircleContact.cpp \
./physics/box2d/Source/Dynamics/Contacts/b2ContactSolver.h \
./physics/box2d/Source/Dynamics/Contacts/b2NullContact.h \
./physics/box2d/Source/Dynamics/Contacts/b2Contact.cpp \
./physics/box2d/Source/Dynamics/Joints/b2RevoluteJoint.h \
./physics/box2d/Source/Dynamics/Joints/b2Joint.cpp \
./physics/box2d/Source/Dynamics/Joints/b2MouseJoint.cpp \
./physics/box2d/Source/Dynamics/Joints/b2GearJoint.cpp \
./physics/box2d/Source/Dynamics/Joints/b2RevoluteJoint.cpp \
./physics/box2d/Source/Dynamics/Joints/b2PrismaticJoint.cpp \
./physics/box2d/Source/Dynamics/Joints/b2MouseJoint.h \
./physics/box2d/Source/Dynamics/Joints/b2PulleyJoint.cpp \
./physics/box2d/Source/Dynamics/Joints/b2Joint.h \
./physics/box2d/Source/Dynamics/Joints/b2PulleyJoint.h \
./physics/box2d/Source/Dynamics/Joints/b2GearJoint.h \
./physics/box2d/Source/Dynamics/Joints/b2DistanceJoint.h \
./physics/box2d/Source/Dynamics/Joints/b2DistanceJoint.cpp \
./physics/box2d/Source/Dynamics/Joints/b2PrismaticJoint.h \
./physics/box2d/Source/Common/b2Settings.cpp \
./physics/box2d/Source/Common/b2Math.h \
./physics/box2d/Source/Common/b2StackAllocator.h \
./physics/box2d/Source/Common/b2Math.cpp \
./physics/box2d/Source/Common/b2BlockAllocator.h \
./physics/box2d/Source/Common/b2StackAllocator.cpp \
./physics/box2d/Source/Common/b2Settings.h \
./physics/box2d/Source/Common/Fixed.h \
./physics/box2d/Source/Common/jtypes.h \
./physics/box2d/Source/Common/b2BlockAllocator.cpp \
./physics/box2d/RevoluteJoint.cpp \
./physics/box2d/wrap_DistanceJoint.h \
./physics/box2d/wrap_Contact.cpp \
./physics/box2d/PrismaticJoint.cpp \
./physics/box2d/wrap_Contact.h \
./physics/box2d/wrap_Joint.h \
./physics/box2d/PrismaticJoint.h \
./physics/box2d/wrap_Shape.h \
./physics/box2d/wrap_CircleShape.h \
./physics/box2d/DistanceJoint.h \
./physics/box2d/Shape.h \
./physics/box2d/wrap_MouseJoint.h \
./physics/box2d/RevoluteJoint.h \
./physics/box2d/CircleShape.cpp \
./physics/box2d/wrap_RevoluteJoint.h \
./luasocket/luasocket.h \
./luasocket/luasocket.cpp \
./luasocket/luasocket/http.lua.h \
./luasocket/luasocket/select.c \
./luasocket/luasocket/timeout.c \
./luasocket/luasocket/socket.lua.h \
./luasocket/luasocket/smtp.lua.h \
./luasocket/luasocket/udp.c \
./luasocket/luasocket/url.lua.h \
./luasocket/luasocket/tcp.h \
./luasocket/luasocket/mime.lua.h \
./luasocket/luasocket/ftp.lua.h \
./luasocket/luasocket/inet.c \
./luasocket/luasocket/io.c \
./luasocket/luasocket/inet.h \
./luasocket/luasocket/except.c \
./luasocket/luasocket/usocket.c \
./luasocket/luasocket/except.h \
./luasocket/luasocket/mime.c \
./luasocket/luasocket/auxiliar.c \
./luasocket/luasocket/tp.lua.h \
./luasocket/luasocket/mime.h \
./luasocket/luasocket/luasocket.h \
./luasocket/luasocket/socket.h \
./luasocket/luasocket/unix.c \
./luasocket/luasocket/ltn12.lua.h \
./luasocket/luasocket/usocket.h \
./luasocket/luasocket/auxiliar.h \
./luasocket/luasocket/buffer.c \
./luasocket/luasocket/select.h \
./luasocket/luasocket/tcp.c \
./luasocket/luasocket/luasocket.c \
./luasocket/luasocket/buffer.h \
./luasocket/luasocket/io.h \
./luasocket/luasocket/options.h \
./luasocket/luasocket/udp.h \
./luasocket/luasocket/timeout.h \
./luasocket/luasocket/options.c \
./luasocket/luasocket/unix.h \
./wrap.cpp \
./luax.cpp \
./graphics/Drawable.h \
./graphics/opengl/Animation.h \
./graphics/opengl/Image.h \
./graphics/opengl/Color.h \
./graphics/opengl/Graphics.cpp \
./graphics/opengl/Graphics.h \
./graphics/opengl/Font.cpp \
./graphics/opengl/wrap_Color.h \
./graphics/opengl/TrueTypeFont.h \
./graphics/opengl/wrap_ParticleSystem.h \
./graphics/opengl/Animation.cpp \
./graphics/opengl/wrap_Image.h \
./graphics/opengl/wrap_SpriteBatch.h \
./graphics/opengl/wrap_Graphics.cpp \
./graphics/opengl/GLee.c \
./graphics/opengl/ParticleSystem.cpp \
./graphics/opengl/wrap_Animation.h \
./graphics/opengl/wrap_ParticleSystem.cpp \
./graphics/opengl/wrap_Graphics.h \
./graphics/opengl/wrap_SpriteBatch.cpp \
./graphics/opengl/wrap_Font.h \
./graphics/opengl/SpriteBatch.h \
./graphics/opengl/GLee.h \
./graphics/opengl/ParticleSystem.h \
./graphics/opengl/wrap_Font.cpp \
./graphics/opengl/VertexBuffer.h \
./graphics/opengl/Color.cpp \
./graphics/opengl/ImageFont.h \
./graphics/opengl/SpriteBatch.cpp \
./graphics/opengl/wrap_VertexBuffer.cpp \
./graphics/opengl/VertexBuffer.cpp \
./graphics/opengl/wrap_Image.cpp \
./graphics/opengl/Image.cpp \
./graphics/opengl/wrap_Animation.cpp \
./graphics/opengl/Font.h \
./graphics/opengl/TrueTypeFont.cpp \
./graphics/opengl/wrap_VertexBuffer.h \
./graphics/opengl/ImageFont.cpp \
./graphics/opengl/wrap_Color.cpp \
./graphics/Volatile.cpp \
./graphics/Drawable.cpp \
./graphics/Volatile.h \
./lua/love2.h
