AM_CPPFLAGS = -I/usr/include/AL -I/usr/include/freetype2  $(INCLUDE_LUA) -I/usr/include/SDL
AUTOMAKE_OPTIONS = subdir-objects
DEFAULT_INCLUDES =
SUBDIRS =

# LÖVE executable
bin_PROGRAMS = love
#love_LDFLAGS =
#love_LDADD =

love_SOURCES = \
./scripts/boot.lua.h \
./modules/keyboard/sdl/wrap_Keyboard.h \
./modules/keyboard/sdl/Keyboard.cpp \
./modules/keyboard/sdl/wrap_Keyboard.cpp \
./modules/keyboard/sdl/Keyboard.h \
./modules/native/tcc/libtcc/libtcc.c \
./modules/native/tcc/libtcc/libtcc.h \
./modules/native/tcc/Native.cpp \
./modules/native/tcc/wrap_Native.h \
./modules/native/tcc/wrap_Native.cpp \
./modules/native/tcc/Native.h \
./modules/physics/box2d/wrap_PrismaticJoint.cpp \
./modules/physics/box2d/PolygonShape.cpp \
./modules/physics/box2d/wrap_Joint.cpp \
./modules/physics/box2d/wrap_Physics.h \
./modules/physics/box2d/Body.h \
./modules/physics/box2d/CircleShape.h \
./modules/physics/box2d/Contact.cpp \
./modules/physics/box2d/Physics.cpp \
./modules/physics/box2d/Contact.h \
./modules/physics/box2d/DistanceJoint.cpp \
./modules/physics/box2d/graham/GrahamScanConvexHull.cpp \
./modules/physics/box2d/graham/GrahamScanConvexHull.h \
./modules/physics/box2d/wrap_World.h \
./modules/physics/box2d/World.cpp \
./modules/physics/box2d/PrismaticJoint.h \
./modules/physics/box2d/Physics.h \
./modules/physics/box2d/World.h \
./modules/physics/box2d/Shape.h \
./modules/physics/box2d/wrap_DistanceJoint.cpp \
./modules/physics/box2d/CircleShape.cpp \
./modules/physics/box2d/wrap_Shape.h \
./modules/physics/box2d/Source/Dynamics/b2Island.h \
./modules/physics/box2d/Source/Dynamics/b2Body.cpp \
./modules/physics/box2d/Source/Dynamics/b2Body.h \
./modules/physics/box2d/Source/Dynamics/b2World.h \
./modules/physics/box2d/Source/Dynamics/b2World.cpp \
./modules/physics/box2d/Source/Dynamics/Contacts/b2PolyContact.cpp \
./modules/physics/box2d/Source/Dynamics/Contacts/b2PolyAndCircleContact.cpp \
./modules/physics/box2d/Source/Dynamics/Contacts/b2PolyContact.h \
./modules/physics/box2d/Source/Dynamics/Contacts/b2CircleContact.h \
./modules/physics/box2d/Source/Dynamics/Contacts/b2Contact.h \
./modules/physics/box2d/Source/Dynamics/Contacts/b2Contact.cpp \
./modules/physics/box2d/Source/Dynamics/Contacts/b2ContactSolver.cpp \
./modules/physics/box2d/Source/Dynamics/Contacts/b2PolyAndCircleContact.h \
./modules/physics/box2d/Source/Dynamics/Contacts/b2NullContact.h \
./modules/physics/box2d/Source/Dynamics/Contacts/b2CircleContact.cpp \
./modules/physics/box2d/Source/Dynamics/Contacts/b2ContactSolver.h \
./modules/physics/box2d/Source/Dynamics/b2WorldCallbacks.cpp \
./modules/physics/box2d/Source/Dynamics/b2ContactManager.cpp \
./modules/physics/box2d/Source/Dynamics/b2WorldCallbacks.h \
./modules/physics/box2d/Source/Dynamics/Joints/b2GearJoint.cpp \
./modules/physics/box2d/Source/Dynamics/Joints/b2PrismaticJoint.h \
./modules/physics/box2d/Source/Dynamics/Joints/b2Joint.h \
./modules/physics/box2d/Source/Dynamics/Joints/b2MouseJoint.cpp \
./modules/physics/box2d/Source/Dynamics/Joints/b2MouseJoint.h \
./modules/physics/box2d/Source/Dynamics/Joints/b2DistanceJoint.cpp \
./modules/physics/box2d/Source/Dynamics/Joints/b2PrismaticJoint.cpp \
./modules/physics/box2d/Source/Dynamics/Joints/b2PulleyJoint.cpp \
./modules/physics/box2d/Source/Dynamics/Joints/b2RevoluteJoint.cpp \
./modules/physics/box2d/Source/Dynamics/Joints/b2DistanceJoint.h \
./modules/physics/box2d/Source/Dynamics/Joints/b2GearJoint.h \
./modules/physics/box2d/Source/Dynamics/Joints/b2RevoluteJoint.h \
./modules/physics/box2d/Source/Dynamics/Joints/b2PulleyJoint.h \
./modules/physics/box2d/Source/Dynamics/Joints/b2Joint.cpp \
./modules/physics/box2d/Source/Dynamics/b2Island.cpp \
./modules/physics/box2d/Source/Dynamics/b2ContactManager.h \
./modules/physics/box2d/Source/Collision/b2BroadPhase.h \
./modules/physics/box2d/Source/Collision/b2PairManager.cpp \
./modules/physics/box2d/Source/Collision/b2Collision.h \
./modules/physics/box2d/Source/Collision/b2BroadPhase.cpp \
./modules/physics/box2d/Source/Collision/b2CollidePoly.cpp \
./modules/physics/box2d/Source/Collision/Shapes/b2Shape.cpp \
./modules/physics/box2d/Source/Collision/Shapes/b2PolygonShape.cpp \
./modules/physics/box2d/Source/Collision/Shapes/b2Shape.h \
./modules/physics/box2d/Source/Collision/Shapes/b2CircleShape.h \
./modules/physics/box2d/Source/Collision/Shapes/b2CircleShape.cpp \
./modules/physics/box2d/Source/Collision/Shapes/b2PolygonShape.h \
./modules/physics/box2d/Source/Collision/b2TimeOfImpact.cpp \
./modules/physics/box2d/Source/Collision/b2PairManager.h \
./modules/physics/box2d/Source/Collision/b2Distance.cpp \
./modules/physics/box2d/Source/Collision/b2CollideCircle.cpp \
./modules/physics/box2d/Source/Collision/b2Collision.cpp \
./modules/physics/box2d/Source/Common/b2BlockAllocator.cpp \
./modules/physics/box2d/Source/Common/b2Math.cpp \
./modules/physics/box2d/Source/Common/b2BlockAllocator.h \
./modules/physics/box2d/Source/Common/b2StackAllocator.cpp \
./modules/physics/box2d/Source/Common/b2Settings.h \
./modules/physics/box2d/Source/Common/b2Math.h \
./modules/physics/box2d/Source/Common/b2StackAllocator.h \
./modules/physics/box2d/Source/Common/jtypes.h \
./modules/physics/box2d/Source/Common/Fixed.h \
./modules/physics/box2d/Source/Common/b2Settings.cpp \
./modules/physics/box2d/wrap_MouseJoint.cpp \
./modules/physics/box2d/wrap_PolygonShape.cpp \
./modules/physics/box2d/RevoluteJoint.cpp \
./modules/physics/box2d/wrap_Contact.cpp \
./modules/physics/box2d/PolygonShape.h \
./modules/physics/box2d/wrap_Physics.cpp \
./modules/physics/box2d/wrap_CircleShape.h \
./modules/physics/box2d/RevoluteJoint.h \
./modules/physics/box2d/wrap_CircleShape.cpp \
./modules/physics/box2d/DistanceJoint.h \
./modules/physics/box2d/wrap_PolygonShape.h \
./modules/physics/box2d/wrap_Joint.h \
./modules/physics/box2d/MouseJoint.cpp \
./modules/physics/box2d/MouseJoint.h \
./modules/physics/box2d/wrap_World.cpp \
./modules/physics/box2d/wrap_PrismaticJoint.h \
./modules/physics/box2d/Shape.cpp \
./modules/physics/box2d/wrap_Contact.h \
./modules/physics/box2d/Include/Box2D.h \
./modules/physics/box2d/wrap_MouseJoint.h \
./modules/physics/box2d/wrap_RevoluteJoint.cpp \
./modules/physics/box2d/wrap_RevoluteJoint.h \
./modules/physics/box2d/wrap_DistanceJoint.h \
./modules/physics/box2d/wrap_Shape.cpp \
./modules/physics/box2d/Body.cpp \
./modules/physics/box2d/wrap_Body.h \
./modules/physics/box2d/PrismaticJoint.cpp \
./modules/physics/box2d/Joint.cpp \
./modules/physics/box2d/wrap_Body.cpp \
./modules/physics/box2d/Joint.h \
./modules/audio/openal/wrap_Audible.h \
./modules/audio/openal/wrap_Audio.h \
./modules/audio/openal/wrap_Sound.cpp \
./modules/audio/openal/Music.h \
./modules/audio/openal/Channel.h \
./modules/audio/openal/Sound.cpp \
./modules/audio/openal/wrap_Channel.h \
./modules/audio/openal/Audio.h \
./modules/audio/openal/Audible.cpp \
./modules/audio/openal/wrap_Music.cpp \
./modules/audio/openal/Sound.h \
./modules/audio/openal/Channel.cpp \
./modules/audio/openal/wrap_Audible.cpp \
./modules/audio/openal/wrap_Music.h \
./modules/audio/openal/wrap_Audio.cpp \
./modules/audio/openal/Audible.h \
./modules/audio/openal/Audio.cpp \
./modules/audio/openal/wrap_Channel.cpp \
./modules/audio/openal/Music.cpp \
./modules/audio/openal/wrap_Sound.h \
./modules/graphics/Volatile.h \
./modules/graphics/Drawable.cpp \
./modules/graphics/Volatile.cpp \
./modules/graphics/Drawable.h \
./modules/graphics/opengl/SpriteBatch.cpp \
./modules/graphics/opengl/ParticleSystem.h \
./modules/graphics/opengl/wrap_Animation.cpp \
./modules/graphics/opengl/ImageFont.cpp \
./modules/graphics/opengl/Color.cpp \
./modules/graphics/opengl/Animation.h \
./modules/graphics/opengl/Font.cpp \
./modules/graphics/opengl/Animation.cpp \
./modules/graphics/opengl/wrap_Image.h \
./modules/graphics/opengl/wrap_Color.cpp \
./modules/graphics/opengl/wrap_Image.cpp \
./modules/graphics/opengl/Graphics.h \
./modules/graphics/opengl/Image.h \
./modules/graphics/opengl/wrap_VertexBuffer.cpp \
./modules/graphics/opengl/wrap_Graphics.h \
./modules/graphics/opengl/wrap_SpriteBatch.h \
./modules/graphics/opengl/wrap_Graphics.cpp \
./modules/graphics/opengl/GLee.c \
./modules/graphics/opengl/Graphics.cpp \
./modules/graphics/opengl/wrap_ParticleSystem.h \
./modules/graphics/opengl/TrueTypeFont.cpp \
./modules/graphics/opengl/wrap_Color.h \
./modules/graphics/opengl/wrap_Animation.h \
./modules/graphics/opengl/wrap_VertexBuffer.h \
./modules/graphics/opengl/ParticleSystem.cpp \
./modules/graphics/opengl/TrueTypeFont.h \
./modules/graphics/opengl/VertexBuffer.h \
./modules/graphics/opengl/wrap_SpriteBatch.cpp \
./modules/graphics/opengl/Color.h \
./modules/graphics/opengl/wrap_Font.cpp \
./modules/graphics/opengl/wrap_Font.h \
./modules/graphics/opengl/SpriteBatch.h \
./modules/graphics/opengl/ImageFont.h \
./modules/graphics/opengl/Image.cpp \
./modules/graphics/opengl/VertexBuffer.cpp \
./modules/graphics/opengl/GLee.h \
./modules/graphics/opengl/Font.h \
./modules/graphics/opengl/wrap_ParticleSystem.cpp \
./modules/image/ImageData.h \
./modules/image/devil/ImageData.h \
./modules/image/devil/wrap_Image.h \
./modules/image/devil/wrap_Image.cpp \
./modules/image/devil/Image.h \
./modules/image/devil/wrap_ImageData.cpp \
./modules/image/devil/wrap_ImageData.h \
./modules/image/devil/Image.cpp \
./modules/image/devil/ImageData.cpp \
./modules/mouse/sdl/Mouse.h \
./modules/mouse/sdl/wrap_Mouse.h \
./modules/mouse/sdl/Mouse.cpp \
./modules/mouse/sdl/wrap_Mouse.cpp \
./modules/sound/SoundData.h \
./modules/sound/sdlsound/wrap_Sound.cpp \
./modules/sound/sdlsound/Sound.cpp \
./modules/sound/sdlsound/SoundData.h \
./modules/sound/sdlsound/Sound.h \
./modules/sound/sdlsound/wrap_SoundData.h \
./modules/sound/sdlsound/SoundData.cpp \
./modules/sound/sdlsound/wrap_SoundData.cpp \
./modules/sound/sdlsound/wrap_Sound.h \
./modules/timer/sdl/Timer.h \
./modules/timer/sdl/Timer.cpp \
./modules/timer/sdl/wrap_Timer.cpp \
./modules/timer/sdl/wrap_Timer.h \
./modules/filesystem/physfs/FileData.cpp \
./modules/filesystem/physfs/wrap_Filesystem.cpp \
./modules/filesystem/physfs/Filesystem.cpp \
./modules/filesystem/physfs/wrap_File.cpp \
./modules/filesystem/physfs/FileData.h \
./modules/filesystem/physfs/wrap_Filesystem.h \
./modules/filesystem/physfs/File.cpp \
./modules/filesystem/physfs/Filesystem.h \
./modules/filesystem/physfs/File.h \
./modules/filesystem/physfs/wrap_File.h \
./modules/filesystem/File.h \
./modules/event/sdl/wrap_Event.h \
./modules/event/sdl/Event.cpp \
./modules/event/sdl/Event.h \
./modules/event/sdl/wrap_Event.cpp \
./modules/event/Event.h \
./modules/joystick/sdl/Joystick.h \
./modules/joystick/sdl/wrap_Joystick.cpp \
./modules/joystick/sdl/Joystick.cpp \
./modules/joystick/sdl/wrap_Joystick.h \
./physics/box2d/Source/Common/b2Settings.h \
./libraries/lanes/lanes.cpp \
./libraries/lanes/lanes/threading.h \
./libraries/lanes/lanes/tools.c \
./libraries/lanes/lanes/lanes.lua.h \
./libraries/lanes/lanes/threading.c \
./libraries/lanes/lanes/tools.h \
./libraries/lanes/lanes/lanes.c \
./libraries/lanes/lanes.h \
./libraries/luasocket/luasocket.cpp \
./libraries/luasocket/luasocket.h \
./libraries/luasocket/libluasocket/inet.c \
./libraries/luasocket/libluasocket/options.h \
./libraries/luasocket/libluasocket/buffer.h \
./libraries/luasocket/libluasocket/io.h \
./libraries/luasocket/libluasocket/unix.c \
./libraries/luasocket/libluasocket/ltn12.lua.h \
./libraries/luasocket/libluasocket/select.c \
./libraries/luasocket/libluasocket/udp.c \
./libraries/luasocket/libluasocket/socket.lua.h \
./libraries/luasocket/libluasocket/smtp.lua.h \
./libraries/luasocket/libluasocket/luasocket.c \
./libraries/luasocket/libluasocket/mime.lua.h \
./libraries/luasocket/libluasocket/except.c \
./libraries/luasocket/libluasocket/usocket.c \
./libraries/luasocket/libluasocket/mime.c \
./libraries/luasocket/libluasocket/options.c \
./libraries/luasocket/libluasocket/tcp.c \
./libraries/luasocket/libluasocket/tp.lua.h \
./libraries/luasocket/libluasocket/timeout.c \
./libraries/luasocket/libluasocket/url.lua.h \
./libraries/luasocket/libluasocket/socket.h \
./libraries/luasocket/libluasocket/udp.h \
./libraries/luasocket/libluasocket/http.lua.h \
./libraries/luasocket/libluasocket/usocket.h \
./libraries/luasocket/libluasocket/except.h \
./libraries/luasocket/libluasocket/auxiliar.c \
./libraries/luasocket/libluasocket/luasocket.h \
./libraries/luasocket/libluasocket/buffer.c \
./libraries/luasocket/libluasocket/unix.h \
./libraries/luasocket/libluasocket/tcp.h \
./libraries/luasocket/libluasocket/mime.h \
./libraries/luasocket/libluasocket/timeout.h \
./libraries/luasocket/libluasocket/select.h \
./libraries/luasocket/libluasocket/inet.h \
./libraries/luasocket/libluasocket/ftp.lua.h \
./libraries/luasocket/libluasocket/io.c \
./libraries/luasocket/libluasocket/auxiliar.h \
./common/Exception.h \
./common/Object.cpp \
./common/Matrix.cpp \
./common/Vector.h \
./common/types.h \
./common/config.h \
./common/runtime.h \
./common/Exception.cpp \
./common/Vector.cpp \
./common/runtime.cpp \
./common/Module.h \
./common/math.h \
./common/constants.h \
./common/Data.h \
./common/Reference.cpp \
./common/Matrix.h \
./common/Reference.h \
./common/Object.h \
./love.cpp
