AM_CPPFLAGS = -I/usr/include/SDL -Iinclude

# LÖVE convenience library
noinst_LIBRARIES = liblove.a
liblove_a_SOURCES = \
arg.cpp arg.h \
Configuration.cpp Configuration.h \
Core.cpp Core.h \
Exception.cpp Exception.h \
File.cpp File.h \
Game.cpp Game.h \
Module.cpp Module.h \
MemoryFile.cpp MemoryFile.h \
Resource.cpp Resource.h \
Vector.cpp Vector.h \
version.cpp version.h
