AM_CPPFLAGS = -Wno-conversion -std=c99 -D_GNU_SOURCE

# Chipmunk
noinst_LIBRARIES = libchipmunk.a
libchipmunk_a_SOURCES = \
chipmunk.c chipmunk.h \
cpArbiter.c cpArbiter.h \
cpArray.c cpArray.h \
cpBB.c cpBB.h \
cpBody.c cpBody.h \
cpCollision.c cpCollision.h \
cpHashSet.c cpHashSet.h \
cpJoint.c cpJoint.h \
cpPolyShape.c cpPolyShape.h \
cpShape.c cpShape.h \
cpSpace.c cpSpace.h \
cpSpaceHash.c cpSpaceHash.h \
cpVect.c cpVect.h
